--- a/OpenMPI for VS2013/install.txt
+++ b/OpenMPI for VS2013/install.txt
@@ -1,15 +1,15 @@
 
-Для работы с OpenMPI в Visual Studio необходимо скачать пакет HPC Pack 2012 MS-MPI
+Р”Р»СЏ СЂР°Р±РѕС‚С‹ СЃ OpenMPI РІ Visual Studio РЅРµРѕР±С…РѕРґРёРјРѕ СЃРєР°С‡Р°С‚СЊ РїР°РєРµС‚ HPC Pack 2012 MS-MPI
 
-После установки необходимо подключить HPC Pack 2012 MS-MPI к своему проекту:
+РџРѕСЃР»Рµ СѓСЃС‚Р°РЅРѕРІРєРё РЅРµРѕР±С…РѕРґРёРјРѕ РїРѕРґРєР»СЋС‡РёС‚СЊ HPC Pack 2012 MS-MPI Рє СЃРІРѕРµРјСѓ РїСЂРѕРµРєС‚Сѓ:
 
- 1. Указываем в заголовке библиотеку #include <mpi.h>
- 2. В свойствах проекта C\C++ -> Доп. каталоги подключаемых файлов -> Указываем "C:\Program Files\Microsoft HPC Pack 2012\Inc"
- 3. В свойствах проекта Компановщик -> Доп. каталоги библиотек -> Указываем "C:\Program Files\Microsoft HPC Pack 2012\Lib\i386"
- 4. В свойствах проекта Компановщик -> Ввод -> Доп. зависимости -> Указываем "msmpi.lib"
+ 1. РЈРєР°Р·С‹РІР°РµРј РІ Р·Р°РіРѕР»РѕРІРєРµ Р±РёР±Р»РёРѕС‚РµРєСѓ #include <mpi.h>
+ 2. Р’ СЃРІРѕР№СЃС‚РІР°С… РїСЂРѕРµРєС‚Р° C\C++ -> Р”РѕРї. РєР°С‚Р°Р»РѕРіРё РїРѕРґРєР»СЋС‡Р°РµРјС‹С… С„Р°Р№Р»РѕРІ -> РЈРєР°Р·С‹РІР°РµРј "C:\Program Files\Microsoft HPC Pack 2012\Inc"
+ 3. Р’ СЃРІРѕР№СЃС‚РІР°С… РїСЂРѕРµРєС‚Р° РљРѕРјРїoРЅРѕРІС‰РёРє -> Р”РѕРї. РєР°С‚Р°Р»РѕРіРё Р±РёР±Р»РёРѕС‚РµРє -> РЈРєР°Р·С‹РІР°РµРј "C:\Program Files\Microsoft HPC Pack 2012\Lib\i386"
+ 4. Р’ СЃРІРѕР№СЃС‚РІР°С… РїСЂРѕРµРєС‚Р° РљРѕРјРїoРЅРѕРІС‰РёРє -> Р’РІРѕРґ -> Р”РѕРї. Р·Р°РІРёСЃРёРјРѕСЃС‚Рё -> РЈРєР°Р·С‹РІР°РµРј "msmpi.lib"
 
-Для запуска скомпилированного exe файла необходимо в консоле ввести команду:
+Р”Р»СЏ Р·Р°РїСѓСЃРєР° СЃРєРѕРјРїРёР»РёСЂРѕРІР°РЅРЅРѕРіРѕ exe С„Р°Р№Р»Р° РЅРµРѕР±С…РѕРґРёРјРѕ РІ РєРѕРЅСЃРѕР»Рµ РІРІРµСЃС‚Рё РєРѕРјР°РЅРґСѓ:
 
  mpiexec -n 10 OpenMPI.exe
 
-где -n 10 - задаваемое число узлов
+РіРґРµ -n 10 - Р·Р°РґР°РІР°РµРјРѕРµ С‡РёСЃР»Рѕ СѓР·Р»РѕРІ
